przyczynek do testow